[tool.poetry]
name = "multi-agent-document-processor"
version = "0.1.0"
description = "A multi-agent document processing system using LLMs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "1.32.0"
pdfplumber = "0.10.3"
langchain = "0.1.12"
langchain-community = "0.0.28"
langchain-core = "0.2.18"
crewai = "0.28.0"
python-dotenv = "1.0.1"
packaging = "23.2"
openai = "1.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 